Project 0/CustomPackage/main/default/objects/Game_Friend__c/Game_Friend__c.object-meta.xml
<CustomObject>
    <label>Game Friend</label>
    <nameField>
        <displayFormat>Friend-{00000000}</displayFormat>
        <label>Game Friend Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Friends</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>