Project 0/CustomPackage/main/default/objects/Game_Friend__c/fields/Friend_Request__c.field-meta.xml
<CustomField>
    <fullName>Friend_Request__c</fullName>
    <defaultValue>&quot;Pending&quot;</defaultValue>
    <label>Friend Request</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>