Project 0/CustomPackage/main/default/objects/Game_Friend__c/fields/Friends__c.field-meta.xml
<CustomField>
    <fullName>Friends__c</fullName>
    <label>Friends</label>
    <referenceTo>Game_Account__c</referenceTo>
    <relationshipName>Friends</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>