Project 0/CustomPackage/main/default/objects/Game_Friend__c/fields/Game_Account__c.field-meta.xml
<CustomField>
    <fullName>Game_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Account</label>
    <referenceTo>Game_Account__c</referenceTo>
    <relationshipLabel>Game Friends (Game Account)</relationshipLabel>
    <relationshipName>Game_Friends</relationshipName>
    <type>Lookup</type>
</CustomField>